fix: correct upload form event listener structure and UI states

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,6 +68,51 @@
             </form>
         </section>
 
+        <section class="card hidden" id="skeletonSection">
+            <div class="card-header">
+                <div class="skeleton skeleton-text md" style="height: 24px;"></div>
+            </div>
+            <div class="result-content">
+                <div class="skeleton skeleton-text sm" style="margin-bottom: 20px;"></div>
+                
+                <ul class="skeleton-list">
+                    <li class="skeleton-item">
+                        <div>
+                            <div class="skeleton skeleton-text md"></div> <div class="skeleton skeleton-text sub"></div> </div>
+                        <div class="skeleton-right">
+                            <div class="skeleton skeleton-text sm" style="height: 20px;"></div> </div>
+                    </li>
+                    <li class="skeleton-item">
+                        <div>
+                            <div class="skeleton skeleton-text sm"></div>
+                            <div class="skeleton skeleton-text sub"></div>
+                        </div>
+                        <div class="skeleton-right">
+                            <div class="skeleton skeleton-text sm" style="height: 20px;"></div>
+                        </div>
+                    </li>
+                    <li class="skeleton-item">
+                        <div>
+                            <div class="skeleton skeleton-text md"></div>
+                            <div class="skeleton skeleton-text sub"></div>
+                        </div>
+                        <div class="skeleton-right">
+                            <div class="skeleton skeleton-text sm" style="height: 20px;"></div>
+                        </div>
+                    </li>
+                     <li class="skeleton-item">
+                        <div>
+                            <div class="skeleton skeleton-text sm"></div>
+                            <div class="skeleton skeleton-text sub"></div>
+                        </div>
+                        <div class="skeleton-right">
+                            <div class="skeleton skeleton-text sm" style="height: 20px;"></div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <section class="card result-card hidden" id="resultSection">
             <div class="card-header">
                 <h3>Результат розпізнавання</h3>
