--- a/public/index.html
+++ b/public/index.html
@@ -118,5 +118,6 @@
     </main>
 
     <script src="js/auth.js"></script>
-    <script src="js/script.js"></script> </body>
+    <script src="js/dashboard.js?v=777"></script>
+</body>
 </html>
