--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,6 @@
     </main>
 
     <script src="js/auth.js"></script>
-    <script src="js/dashboard.js?v=final"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
