--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedAnalyzer - Головна</title>
@@ -98,6 +99,21 @@
         <div id="resultSection" class="hidden">
             </div>
 
+        <section class="card chart-card" style="margin-top: 2rem;">
+            <div class="card-header">
+                <h3>Динаміка показників</h3>
+            </div>
+            
+            <div class="chart-controls">
+                <label for="indicatorSelect">Оберіть показник:</label>
+                <select id="indicatorSelect" class="form-select">
+                    <option value="" disabled selected>Завантаження списку...</option>
+                </select>
+            </div>
+            <div class="chart-container" style="position: relative; height:300px; width:100%">
+                <canvas id="dynamicsChart"></canvas>
+            </div>
+        </section>
 
         <hr style="margin: 3rem 0; border: 0; border-top: 1px solid #eee;">
         
@@ -118,6 +134,5 @@
     </main>
 
     <script src="js/auth.js"></script>
-    <script src="js/dashboard.js"></script>
 </body>
 </html>
