style final fix

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -151,8 +151,8 @@
                             <span class="camera-title">Увімкнути камеру</span>
                         </div>
                         
-                        <button type="button" id="takePhotoBtn" class="btn-primary hidden" style="width: 100%; margin-top: 15px;">📸 Зробити фото</button>
-                        <button type="button" id="retakePhotoBtn" class="btn-outline hidden" style="width: 100%; margin-top: 10px;">🔄 Перезняти</button>
+                        <button type="button" id="takePhotoBtn" class="btn-primary hidden" style="width: 100%; margin-top: 15px;"> Зробити фото</button>
+                        <button type="button" id="retakePhotoBtn" class="btn-outline hidden" style="width: 100%; margin-top: 10px;">Перезняти</button>
                     </div>
                     <p id="cameraError" class="error-text hidden"></p>
                 </div>
